<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">EdwardWeather</string>
    <string name="luncher_text">Edward Weather</string>
    <string name="navigation_drawer_open">打开</string>
    <string name="navigation_drawer_close">关闭</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="author_mail">邮箱：1732141816wmd@gmail.com</string>
    <string name="content_description_default">图片描述</string>
    <string name="title_detail_module">天气详情</string>
    <string name="title_forecast_module">预报天气</string>
    <string name="separator">/</string>
    <string name="title_index_module">生活指数</string>
    <string name="title_sunrisesunset_module">日出日落</string>

    <string name="temp_unit">°</string>
    <string name="wind_unit">级</string>
    <string name="cloud_wet_unit">%</string>
    <string name="precipitation_unit">mm</string>
    <string name="visibility_unit">km</string>
    <string name="atmospheric_pressure_unit">hPa</string>
    <string name="update_by_text">更新于</string>
    <string name="_2019_edwardweather_all_rights_reserved">Copyright © EdwardWeather,all rights reserved</string>
    <string name="text_Unknown">未知</string>
    <string name="text_temp_Unknown_show">N°</string>

    <string name="cp_search_hint_text">城市中文名或拼音</string>
    <string name="cp_cancel">取消</string>
    <string name="cp_no_result">没有找到，换个词试试~</string>
    <string name="cp_locate_failed">定位失败</string>
    <string name="cp_locating">正在定位…</string>
    <string name="contentdescription_del_search">删除搜索</string>

    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="gpsNotifyMsg">当前应用需要打开定位功能。\n\n请点击\"设置\"-\"定位服务\"-打开定位功能。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="version">当前版本：V1.0.0.0</string>
    <string name="clear_data_msg">确定要清除缓存数据吗？</string>
    <string name="btn_sure">确定</string>


</resources>
