<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.AboutActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_top"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:elevation="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ic_about_top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_description_default"
            android:scaleType="fitXY"
            android:src="@drawable/ic_about_top_bgm" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_saying"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="有你的关注，我会更努力改进！^_^"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_top" />

    <View
        android:id="@+id/f_line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="5dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/tv_saying" />

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="25dp"
        android:text="@string/version"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/f_line" />

    <View
        android:id="@+id/s_line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:background="@color/cp_color_gray_dark"
        app:layout_constraintTop_toBottomOf="@id/tv_version"
        app:layout_goneMarginTop="25dp" />

    <TextView
        android:id="@+id/tv_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="10dp"
        android:text="与我联系"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/s_line" />

    <TextView
        android:id="@+id/tv_contact_with_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="15dp"
        android:drawableStart="@drawable/ic_emian"
        android:drawableLeft="@drawable/ic_emian"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:text="请联系我"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_contact" />

    <View
        android:id="@+id/t_line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:background="@color/cp_color_gray_dark"
        app:layout_constraintTop_toBottomOf="@id/tv_contact_with_me"
        app:layout_goneMarginTop="25dp" />

    <TextView
        android:id="@+id/tv_visit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="15dp"
        android:drawableStart="@drawable/ic_link"
        android:drawableLeft="@drawable/ic_link"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:text="欢迎访问我的网站"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/t_line" />

    <View
        android:id="@+id/fo_line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:background="@color/cp_color_gray_dark"
        app:layout_constraintTop_toBottomOf="@id/tv_visit"
        app:layout_goneMarginTop="25dp" />

    <TextView
        android:id="@+id/tv_github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="15dp"
        android:drawableStart="@drawable/ic_github"
        android:drawableLeft="@drawable/ic_github"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:text="关注我的Github"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fo_line" />

    <View
        android:id="@+id/fi_line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:background="@color/cp_color_gray_dark"
        app:layout_constraintTop_toBottomOf="@id/tv_github"
        app:layout_goneMarginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/_2019_edwardweather_all_rights_reserved"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="SmallSp" />
</androidx.constraintlayout.widget.ConstraintLayout>